[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jabagram"
description = "Fully functional bridge between Telegram and XMPP"
authors = [ {name = "Vasiliy Stelmachenok", email = "ventureo@yandex.ru"} ]
maintainers = [ {name = "Vasiliy Stelmachenok", email = "ventureo@yandex.ru"} ]
keywords = ["xmpp", "telegram", "asyncio", "bridge"]
license = "GPL-3.0-only"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = ["aiohttp", "slixmpp", "unidecode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]

[project.scripts]
jabagram = "jabagram.runner:main"

[project.urls]
Homepage = "https://github.com/ventureoo/jabagram"
Repository = "https://github.com/ventureoo/jabagram.git"
"Bug Tracker" = "https://github.com/ventureoo/jabagram/issues"

[tool.hatch.version]
path = "jabagram/__init__.py"

